# parcel

./: .env.example  .gitignore  Dockerfile  README.md  debug_run.py  debug_run_webapp.py  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
alembic/: env.py
alembic/versions/: 4cc0f35b3a19_initial_migration.py  9f7c6009b542_change_parcel_id_from_uuid_to_ulid.py  f92ffae60c22_add_initial_package_types_data.py
celery/: Dockerfile  copy_models.sh  requirements.txt
celery/src/: run_tasks.py  tasks.py
src/: app.py
src/exceptions/: error_schemas.py  exceptions.py
src/interfaces/: parcel.py
src/models/: __init__.py  base.py  parcel.py  parcel_type.py
src/routes/: dependencies.py  parcel_types.py  parcels.py
src/schemas/: parcel.py  parcel_type.py  ulid.py
src/services/: parcel.py  parcel_create.py  parcel_register.py  parcel_type.py
tests/: test_routes.py
webapp/: Dockerfile  alembic.ini  requirements.txt
webapp/alembic/: env.py
webapp/alembic/versions/: 82700929301f_change_float_to_decimal_for_certain_.py
webapp/src/: app.py  internal_services_app.py
webapp/src/config/: __init__.py  pricing_conf.py
webapp/src/exceptions/: error_handlers.py  error_schemas.py
webapp/src/interfaces/: cache.py
webapp/src/models/: __init__.py  base.py  parcel.py  parcel_type.py
webapp/src/routes/: dependencies.py  healthy.py  internal_services.py  parcel_types.py  parcels.py
webapp/src/schemas/: parcel.py  parcel_type.py  statuses.py
webapp/src/services/: currency_fetch.py  currency_redis.py  currency_service.py  parcel.py  redis_wrapper.py  shipping_costs_update_service.py
