[tool.poetry]
name = "parcel"
version = "0.1.0"
description = "Parcel microservice"
authors = ["Sergei Kruchinin <sergeykr@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.4"
sqlalchemy = "^2.0.36"
sqlalchemy-utils = "^0.41.2"
uvicorn = "^0.32.0"
gunicorn = "^23.0.0"
aiomysql = "^0.2.0"
cryptography = "^43.0.3"
ulid-py = "^1.1.0"

[tool.poetry.group.dev.dependencies]
alembic = "^1.14.0"
python-dotenv = "^1.0.1"

[tool.poetry.group.celery.dependencies]
sqlalchemy = "^2.0.36"
redis = "^5.2.0"
celery = {extras = ["async"], version = "^5.4.0"}
sqlalchemy-utils = "^0.41.2"
requests = "^2.32.3"
pymysql = "^1.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
