[tool.poetry]
name = "parcel"
version = "0.1.0"
description = "Parcel microservice"
authors = ["Sergei Kruchinin <sergeykr@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.4"
sqlalchemy = "^2.0.36"
sqlalchemy-utils = "^0.41.2"
uvicorn = "^0.32.0"
gunicorn = "^23.0.0"
aiomysql = "^0.2.0"
cryptography = "^43.0.3"
ulid-py = "^1.1.0"
alembic = "^1.14.0"
httpx = ">=0.28.0,<0.29.0"
redis = "^5.2.0"

[tool.poetry.group.dev.dependencies]
alembic = "^1.14.0"
python-dotenv = "^1.0.1"
pytest = "^8.3.3"
httpx = "^0.28.0"
pytest-asyncio = "^0.24.0"

[tool.poetry.group.celery.dependencies]
redis = "^5.2.0"
celery = "^5.4.0"
requests = "^2.32.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
